Update biology page title and structure

--- a/topic-biology.html
+++ b/topic-biology.html
@@ -3,93 +3,82 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>生物 | 心能教育 EduSynergy</title>
-  <meta name="description" content="EduSynergy 生物专栏：从机制到证据的思维训练。每期一个大概念，中英对照。" />
+  <title>Biology | EduSynergy</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body data-mode="bi">
-  <header class="topbar">
-    <div class="container topbar-inner">
-      <a class="brand" href="index.html" aria-label="EduSynergy Home">
-        <span class="brand-mark">心能</span>
-        <span class="brand-name">心能教育</span>
-        <span class="brand-sep">·</span>
-        <span class="brand-name-en">EduSynergy</span>
-      </a>
 
-      <nav class="top-actions">
-        <a class="navlink" href="topics.html"><span class="zh">专题</span><span class="en">Topics</span></a>
-        <button class="chip" id="modeToggle" type="button" aria-label="Bilingual toggle">
-          <span class="zh">中英</span><span class="en">BI</span>
-        </button>
-      </nav>
-    </div>
-  </header>
+<header class="topbar">
+  <div class="container topbar-inner">
+    <a class="brand" href="index.html">
+      <span class="brand-mark">心能</span>
+      <span class="brand-name">心能教育</span>
+      <span class="brand-sep">·</span>
+      <span class="brand-name-en">EduSynergy</span>
+    </a>
+  </div>
+</header>
 
-  <main class="container">
-    <section class="hero compact">
-      <div class="hero-card">
-        <h1>
-          <span class="zh">生物：从机制到证据的思维训练</span>
-          <span class="en">Biology: Thinking from mechanism to evidence</span>
-        </h1>
-        <p class="lead">
-          <span class="zh">每期一个大概念：关键词汇、图解、实验思路、写作句型。把“背知识点”变成“会讲证据链”。</span>
-          <span class="en">Each issue: big idea, key vocabulary, diagrams, experimental thinking, and writing frames—move from memorizing to building evidence chains.</span>
-        </p>
-        <div class="pill-row">
-          <span class="pill"><span class="zh">机制</span><span class="en">Mechanism</span></span>
-          <span class="pill"><span class="zh">证据</span><span class="en">Evidence</span></span>
-          <span class="pill"><span class="zh">写作</span><span class="en">Writing</span></span>
-        </div>
-      </div>
-    </section>
+<main class="container">
 
-    <section class="card">
-      <h2><span class="zh">每期固定结构（便于学生迁移）</span><span class="en">A repeatable issue structure</span></h2>
-      <ul class="muted">
-        <li><span class="zh"><b>Big Idea</b>：一句话写出本期中心概念（中英对照）。</span><span class="en"><b>Big Idea</b>: one sentence stating the central concept (bilingual).</span></li>
-        <li><span class="zh"><b>Vocab</b>：6–10 个关键词（定义 + 用法句）。</span><span class="en"><b>Vocab</b>: 6–10 key terms (definition + usage sentence).</span></li>
-        <li><span class="zh"><b>Figure</b>：一张机制图（箭头说明）。</span><span class="en"><b>Figure</b>: one mechanism diagram (annotated arrows).</span></li>
-        <li><span class="zh"><b>Evidence</b>：一个实验/研究思路（变量、对照、预测）。</span><span class="en"><b>Evidence</b>: one experiment/research idea (variables, controls, predictions).</span></li>
-      </ul>
-    </section>
+<section class="hero">
+  <div class="hero-card section-biology">
+    <h1 class="stack">
+      <span class="zh">生物：机制 × 证据 × 表达</span>
+      <span class="en">Biology</span>
+    </h1>
+    <p class="lead stack">
+      <span class="zh">生命系统的层级与结构。</span>
+      <span class="en">Structures across life systems.</span>
+    </p>
+  </div>
+</section>
 
-    <section class="card">
-      <h2><span class="zh">生物目录（多期）</span><span class="en">Issues</span></h2>
-      <p class="muted">
-        <span class="zh">你可以从“细胞与能量”“遗传与变异”“生态系统”任意开篇。</span>
-        <span class="en">You can start with Cells & Energy, Genetics & Variation, or Ecosystems.</span>
+<section class="card">
+  <h2 class="stack">
+    <span class="zh">子专题</span>
+    <span class="en">Subtopics</span>
+  </h2>
+
+  <div class="grid topics">
+
+    <article class="card topic-card section-biology">
+      <h3 class="topic-title">
+        <span class="zh">细胞与能量</span>
+        <span class="en">Cell & Energy</span>
+      </h3>
+      <p class="muted stack">
+        <span class="zh">结构与代谢</span>
+        <span class="en">Structure & metabolism</span>
       </p>
+    </article>
 
-      <div class="grid topics">
-        <article class="card topic-card">
-          <div class="topic-meta">
-            <span class="topic-tag"><span class="zh">第 1 期</span><span class="en">Issue 01</span></span>
-            <span class="topic-tag"><span class="zh">机制图</span><span class="en">Mechanism</span></span>
-          </div>
-          <h3 class="topic-title">
-            <a href="#">
-              <span class="zh">（待写）从机制图到证据链：如何“讲清楚一个过程”</span>
-              <span class="en">(Draft) From mechanism diagrams to evidence chains: explaining a process</span>
-            </a>
-          </h3>
-          <p class="muted">
-            <span class="zh">占位：写好后把链接改为 article-bio-01.html。</span>
-            <span class="en">Placeholder: replace # with article-bio-01.html.</span>
-          </p>
-        </article>
-      </div>
-    </section>
+    <article class="card topic-card section-biology">
+      <h3 class="topic-title">
+        <span class="zh">遗传</span>
+        <span class="en">Genetics</span>
+      </h3>
+      <p class="muted stack">
+        <span class="zh">信息与传递</span>
+        <span class="en">Information flow</span>
+      </p>
+    </article>
 
-    <footer class="footer">
-      <div class="footer-inner">
-        <div class="muted small">© <span id="year"></span> EduSynergy</div>
-      </div>
-    </footer>
-  </main>
+    <article class="card topic-card section-biology">
+      <h3 class="topic-title">
+        <span class="zh">生态与进化</span>
+        <span class="en">Ecology & Evolution</span>
+      </h3>
+      <p class="muted stack">
+        <span class="zh">系统与适应</span>
+        <span class="en">Systems & adaptation</span>
+      </p>
+    </article>
 
-  <script src="app.js"></script>
+  </div>
+</section>
+
+</main>
 </body>
 </html>
